[package]
name = "cs-class-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
logos = "0.12.0"
llvm-sys = "130"
regex = "1"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
clap = { version = "3.1.18", features = ["derive"] }

[build-dependencies]
lalrpop = "0.19.7"
